<resources>
    <string name="app_name">LazaStore</string>
    <string name="welcomeText">Find your \nGadget</string>
    <string name="welcome">Welcome back</string>
    <string name="man">Man</string>
    <string name="skip">Skip</string>
    <string name="women">Woman</string>
    <string name="login">Login</string>
    <string name="getStarted">Get Started</string>
    <string name="forgotPass">Forgot passcode?</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="chooseBrand">Choose Category</string>
    <string name="viewAll">View All</string>
    <string name="hello">Hello</string>
    <string name="welcomeHome">Welcome to Laza</string>
    <string name="newArrival">New Arrival</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="signin"><u>Signin</u></string>
    <string name="facebook">Facebook</string>
    <string name="welcomeLogin">Welcome!</string>
    <string name="welcomeRegister">Welcome, please login!</string>
    <string name="nickname">Nickname</string>
    <string name="joinUs">Join us</string>
    <string name="twitter">Twitter</string>
    <string name="error">Error</string>
    <string name="emptyCat">Category is empty</string>
    <string name="checkOtherCat">Please check other categories</string>
    <string name="success">Success</string>
    <string name="colors">Colors</string>
    <string name="info">Info</string>
    <string name="rePass">Re-password</string>
    <string name="fillTheGaps">Fill the gaps</string>
    <string name="passShort">Password is too short. (Min. 5 symbols)</string>
    <string name="google">Google</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sort">Sort</string>
    <string name="rememberMe">Remember me</string>
    <string name="createAcc">Create account</string>
    <string name="verifiedProfile">Verified Profile</string>
    <string name="items">Items</string>
    <string name="stock">Available in stock</string>
    <string name="accInfo">Account Information</string>
    <string name="order">Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="myProfile">My profile</string>
    <string name="skyBlue">Sky Blue</string>
    <string name="roseGold">Rose Gold</string>
    <string name="editProfile">Edit Profile</string>
    <string name="shoppingAdress">Shopping address</string>
    <string name="orderHistory">Order history</string>
    <string name="cards">Cards</string>
    <string name="logout">Sign out</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="green">Green</string>
    <string name="addToBasket">Add to basket</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="favEmpty">Favorites are empty</string>
    <string name="orderInfo">Order info</string>
    <string name="subtotal">Subtotal</string>
    <string name="shippingCost">Shipping cost</string>
    <string name="checkout">Checkout</string>
    <string name="minItemCount">Quantity should be minimum 1.</string>
    <string name="favTip">Hit the heart button in products to add it to favorites.</string>
    <string name="cartEmpty">Cart is empty</string>
    <string name="nothingFound">Nothing found! :(</string>
    <string name="undo">Undo</string>
    <string name="itemRemoved">Product removed from favorites.</string>
    <string name="cartTip">Hit the \'Add to cart\' button in products to add it to cart.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>