<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.login.LoginFragment">

    <TextView
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_bold"
        android:textSize="55sp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:elevation="0dp"
        android:src="@drawable/ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ellipse"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32">

    </androidx.constraintlayout.widget.Guideline>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/CustomCardView"
        android:layout_width="0dp"
        app:cardBackgroundColor="@color/white"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"

            android:layout_marginHorizontal="44dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/purple"
                android:layout_marginTop="40dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/purple"
                app:startIconDrawable="@drawable/message"
                android:textColorHint="@color/gray_E"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editEmail"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:textSize="15sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/purple"
                android:layout_marginTop="35dp"
                app:startIconDrawable="@drawable/lock"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/purple"
                android:textColorHint="@color/gray_E"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"

                    android:textColorHint="@color/black"
                    android:id="@+id/editPass"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textSize="15sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:text="@string/forgotPass"
                app:rippleColor="@color/purple"
                android:textColor="@color/purple"

                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="5dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_marginTop="42dp"
                android:paddingVertical="25dp"
                android:id="@+id/buttonLogin"
                android:transitionName="loginTransition"
                app:cornerRadius="10dp"
                app:backgroundTint="@color/purple"
                app:rippleColor="@color/white"
                android:text="@string/login"
                android:textSize="20sp"
                android:fontFamily="@font/raleway_bold"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:text="@string/createAcc"
                android:transitionName="buttonRegisterTransition"
                android:textColor="@color/purple"
                android:id="@+id/buttonRegister"
                android:textSize="17sp"
                app:rippleColor="@color/purple"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>