<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.favorites.FavoritesFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05">

    </androidx.constraintlayout.widget.Guideline>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

    </TextView>

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/empty_result_anim"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"></com.airbnb.lottie.LottieAnimationView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/favEmpty"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:text="@string/favTip"
            android:textColor="@color/gray_E"
            android:textSize="13sp">

        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rvFavorites"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_favorite"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>