<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="profileData"
            type="com.bashirli.lazastore.domain.model.remote.ProfileModel" />
    </data>
    <ScrollView
        android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".presentation.ui.profile.ProfileFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.06">

            </androidx.constraintlayout.widget.Guideline>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoBack"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:backgroundTint="@color/gray"
                app:icon="@drawable/arrow_left"
                app:iconTintMode="multiply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline9"
                app:rippleColor="@color/black">

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/myProfile"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGoBack">

            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:elevation="2dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView4"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:layout_gravity="center"
                        app:cardCornerRadius="45dp">

                        <ImageView
                            app:setImageWithURL="@{profileData.image}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </ImageView>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text='@{profileData.firstName+" "+profileData.lastName}'
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:drawableStart="@drawable/message"
                        android:drawablePadding="10dp"
                        android:text="@{profileData.email}"
                        android:drawableTint="@color/black"
                        android:drawableTintMode="multiply"
                        android:fontFamily="@font/raleway_medium"
                        android:textColor="@color/black">

                    </com.google.android.material.textview.MaterialTextView>


                </LinearLayout>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cardView5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="52dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/editProfile"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/blue"
                    app:iconTintMode="multiply"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/shoppingAdress"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/blue"
                    app:iconTintMode="multiply"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/orderHistory"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/blue"
                    app:iconTintMode="multiply"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/cards"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/blue"
                    app:iconTintMode="multiply"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/notifications"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/blue"
                    app:iconTintMode="multiply"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/red"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/arrow_right"
                    app:iconGravity="end"
                    app:iconTint="@color/white"
                    android:id="@+id/buttonSignOut"
                    app:iconSize="24dp"
                    android:gravity="start"
                    app:rippleColor="@color/white"
                    android:stateListAnimator="@null"
                    android:elevation="2dp"
                    android:layout_margin="3dp"
                    android:textSize="18sp"
                    android:paddingVertical="20dp"
                    android:layout_height="wrap_content">

                </com.google.android.material.button.MaterialButton>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>
</layout>